release 1.1.2-ea (2009-09)
- Fixed issue 280
  https://jersey.dev.java.net/issues/show_bug.cgi?id=280
  For the "natural" JSON convention, the humanReadableFormatting option
  now could be set, so that the output JSON contains new-line characters
  and indentation, which makes is easy to read for humans
- Upgraded Jackson library to the version 1.1.1, so that people
  relying on Jackson JAX-RS entity provider does not need to depend on two versions
  of the very same library at their applications 
- Fixed issue, working around a JDK bug in the method URL.toURI() when package
  scanning classes that are present in a directory path location containing
  space characters, for example "Documents and Services".
- Fixed issue 331
  https://jersey.dev.java.net/issues/show_bug.cgi?id=331
  Add support for de/serializing instances of org.w3c.dom.Document.
- Fixed issue 326
  https://jersey.dev.java.net/issues/show_bug.cgi?id=326
  Work around bug 5087240 in the JDK:
  http://bugs.sun.com/view_bug.do?bug_id=5087240
- Fixed issue 330
  https://jersey.dev.java.net/issues/show_bug.cgi?id=330
  ContainerRequest and ContainerResponse by may now be adapted from within
  filters by extending AdaptingContainerRequest and AdaptingContainerResponse
  respectively. The adapter CachedEntityContainerRequest is available for when
  a request entity instance consumed by a filter needs to be cached.
- The oauth modules at the java.net maven repository have moved from
  jersey/oauth to jersey/contribs/jersey-oauth/.

release 1.1.1-ea (2009-07-13)
- Fixed issue 322
  https://jersey.dev.java.net/issues/show_bug.cgi?id=323
  A proxied IoC provider should not be invoked if the component to be proxied
  cannot be instantiated.
- Fixed issue 323
  https://jersey.dev.java.net/issues/show_bug.cgi?id=323
  By default entity processing is disabled when XML parsing, on the client and
  server side, for JAXB types, SAXSource and DOMSource.